# matcher

./: .gitignore  README.md  build.sh  pyproject.toml  run.sh  setup.cfg
matcher/: config.py  feature_register.py  pipeline.py  prepare_train_features.py  train_head_model.py
matcher/dict_data/: needed_attrs_test_and_freq500.json
matcher/features/: aggregated_vector_features.py  attrs_bert_cosine_features.py  attrs_iou_feature.py  bert64_embedding_features.py  color_features.py  config.py  feature_processor.py  longformer.py  matching_attribute_bert.py  matching_bert_feature.py  pics_cosine_features.py  resnet128_embedding_features.py  simple_categories_features.py
matcher/features/color_data/: name_to_hex_dict.json
matcher/features/dict_data/: rus_to_eng_colors.json
matcher/head_model/: catboost_experiment.py  catboost_scorer.py  model.py
matcher/models/matching_bert/: collator.py  config.py  dataset.py  scorer.py
matcher/quality/: metric.py
matcher/utils/: preprocess.py
