[metadata]
name = uranus_matcher
version = 0.1.1
author = Egor Smirnov
author_email = smirnov.egor.gena@mail.ru
description = Library for Ozon Matcher
url = https://github.com/EgorSmi/matcher
keywords = Ozon, matcher, Uranus
license =  MIT/BSD License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pandas==1.1.5
    numpy==1.21.6
    catboost==1.1
    attrs==21.4.0
    dataclasses==0.6
    tqdm==4.64.1
    addict==2.4.0
    transformers==4.29.1
    fire==0.4.0
    scikit-learn==1.0.2
    torch==1.13.1
    accelerate==0.19.0


[options.packages.find]
where = .
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
